--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -62,7 +62,7 @@
     <div class="container py-md-5">
       <div class="row align-items-center">
         <div class="col-lg-7 py-3 py-md-5">
-          <h1 class="display-3">Remember Writing?</h1>
+          <h1 class="display-3">Remember Writing??</h1>
           <p class="lead text-muted">
             Are you sick of short tweets and impersonal &ldquo;shared&rdquo;
             posts that are reminiscent of the late 90&rsquo;s email forwards? We
@@ -127,8 +127,8 @@
     <!-- footer begins -->
     <footer class="border-top text-center small text-muted py-3">
       <p class="m-0">
-        Copyright &copy; 2019 <a href="/" class="text-muted">OurApp</a>. All
-        rights reserved.
+        Copyright &copy; <%= new Date().getFullYear() %>
+        <a href="/" class="text-muted">OurApp</a>. All rights reserved.
       </p>
     </footer>
 
