Made some changes to the home-guest view template

--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -119,7 +119,7 @@
               type="submit"
               class="py-3 mt-4 btn btn-lg btn-success btn-block"
             >
-              Sign up for OurApp
+              Sign up to WhatsGood
             </button>
           </form>
         </div>
@@ -130,7 +130,7 @@
     <footer class="border-top text-center small text-muted py-3">
       <p class="m-0">
         Copyright &copy; <%= new Date().getFullYear() %>
-        <a href="/" class="text-muted">OurApp</a>. All rights reserved.
+        <a href="/" class="text-muted">WhatsGood</a>. All rights reserved.
       </p>
     </footer>
 
