created the getAvatar function in the User model

--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -66,7 +66,7 @@
 
     <div class="container py-md-5 container--narrow">
       <div class="text-center">
-        <!-- <%= %>  is output something dynamic-->
+        <!-- <%= %>  is to output something dynamic-->
         <h2>Hello <strong><%= username %></strong>, your feed is empty.</h2>
         <p class="lead text-muted">
           Your feed displays the latest posts from the people you follow. If you
