--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -62,6 +62,7 @@
     <!-- header ends here -->
 
     <div class="container py-md-5">
+      <!-- Iterating through the errors array -->
       <% errors.forEach(function(message) { %>
       <div class="alert alert-danger text-center"><%= message %></div>
       <% }) %>
