--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -28,7 +28,7 @@
             class="fas fa-comment"></i></span>
         <a href="#" class="mr-2"><img title="My Profile" data-toggle="tooltip" data-placement="bottom"
             style="width: 32px; height: 32px; border-radius: 16px" src="<%= avatar %>" /></a>
-        <a class="btn btn-sm btn-success mr-2" href="#">Create Post</a>
+        <a class="btn btn-sm btn-success mr-2" href="/create-post">Create Post</a>
         <form action="/logout" method="POST" class="d-inline">
           <button class="btn btn-sm btn-secondary">Sign Out</button>
         </form>
