made the ejs template where we need user session information look within the user object

--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -6,7 +6,7 @@
     <div class="text-center">
       <!-- <%= %>  is to output something dynamic-->
       <h2>Hello <strong>
-          <%= username %>
+          <%= user.username %>
         </strong>, your feed is empty.</h2>
       <p class="lead text-muted">
         Your feed displays the latest posts from the people you follow. If you
