--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -1,36 +1,44 @@
 <%- include('includes/header') %>
-    <!-- header ends here -->
+<!-- header ends here -->
 
-    <div class="container py-md-5 container--narrow">
-        <div class="d-flex justify-content-between">
-            <h2>
-                <%= post.title %>
-            </h2>
-            <span class="pt-2">
-                <a href="#" class="text-primary mr-2" data-toggle="tooltip" data-placement="top" title="Edit"><i
-                        class="fas fa-edit"></i></a>
-                <form class="delete-post-form d-inline" action="#" method="POST">
-                    <button class="delete-post-button text-danger" data-toggle="tooltip" data-placement="top"
-                        title="Delete"><i class="fas fa-trash"></i></button>
-                </form>
-            </span>
-        </div>
+<div class="container py-md-5 container--narrow">
+  <div class="d-flex justify-content-between">
+    <h2><%= post.title %></h2>
+    <% if(post.isVisitorOwner) { %>
+    <span class="pt-2">
+      <a
+        href="#"
+        class="text-primary mr-2"
+        data-toggle="tooltip"
+        data-placement="top"
+        title="Edit"
+        ><i class="fas fa-edit"></i
+      ></a>
+      <form class="delete-post-form d-inline" action="#" method="POST">
+        <button
+          class="delete-post-button text-danger"
+          data-toggle="tooltip"
+          data-placement="top"
+          title="Delete"
+        >
+          <i class="fas fa-trash"></i>
+        </button>
+      </form>
+    </span>
+    <% } %>
+  </div>
 
-        <p class="text-muted small mb-4">
-            <a href="#"><img class="avatar-tiny" src="<%= post.author.avatar %>"></a>
-            Posted by <a href="#">
-                <%= post.author.username %>
-            </a> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate()%>/<%=
-                        post.createdDate.getFullYear(0) %>
-        </p>
+  <p class="text-muted small mb-4">
+    <a href="#"><img class="avatar-tiny" src="<%= post.author.avatar %>" /></a>
+    Posted by <a href="#"> <%= post.author.username %> </a> on <%=
+    post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate()%>/<%=
+    post.createdDate.getFullYear(0) %>
+  </p>
 
-        <div class="body-content">
-            <p>
-                <%= post.body %>
-            </p>
-        </div>
+  <div class="body-content">
+    <p><%= post.body %></p>
+  </div>
+</div>
 
-    </div>
-
-    <!-- footer begins -->
-    <%- include('includes/footer') %>
+<!-- footer begins -->
+<%- include('includes/footer') %>
